--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -231,10 +231,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fd705c81640>"
+       "<graphviz.graphs.Digraph at 0x7f75f11a8110>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -644,10 +644,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fd705c27530>"
+       "<graphviz.graphs.Digraph at 0x7f75f11ab8c0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -893,21 +893,21 @@
        "<!-- 5 -->\n",
        "<g id=\"node11\" class=\"node\">\n",
        "<title>5</title>\n",
-       "<ellipse fill=\"lightyellow\" stroke=\"lightyellow\" cx=\"253\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"253\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">F</text>\n",
+       "<ellipse fill=\"lightyellow\" stroke=\"lightyellow\" cx=\"253\" cy=\"-18\" rx=\"33.29\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"253\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">EXIT</text>\n",
        "</g>\n",
        "<!-- 0&#45;11&#45;&gt;5 -->\n",
        "<g id=\"edge15\" class=\"edge\">\n",
        "<title>0&#45;11&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M27,-602.65C27,-583.06 27,-550.24 27,-522 27,-522 27,-522 27,-109 27,-68.59 153.26,-38.31 217.04,-25.59\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"217.93,-28.98 227.07,-23.63 216.59,-22.11 217.93,-28.98\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M27,-602.65C27,-583.06 27,-550.24 27,-522 27,-522 27,-522 27,-109 27,-69.61 146.97,-39.84 212.1,-26.59\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"212.93,-29.99 222.05,-24.6 211.56,-23.12 212.93,-29.99\"/>\n",
        "<text text-anchor=\"middle\" x=\"41.5\" y=\"-316.6\" font-family=\"Times,serif\" font-size=\"18.00\">1.0</text>\n",
        "</g>\n",
        "<!-- 1&#45;11&#45;&gt;5 -->\n",
        "<g id=\"edge17\" class=\"edge\">\n",
        "<title>1&#45;11&#45;&gt;5</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M308,-402.65C308,-383.06 308,-350.24 308,-322 308,-322 308,-322 308,-109 308,-82.72 290.71,-57.62 275.52,-40.64\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"277.72,-37.87 268.32,-32.98 272.62,-42.66 277.72,-37.87\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M308,-402.65C308,-383.06 308,-350.24 308,-322 308,-322 308,-322 308,-109 308,-83.19 291.33,-58.52 276.34,-41.56\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"278.58,-38.82 269.2,-33.88 273.45,-43.59 278.58,-38.82\"/>\n",
        "<text text-anchor=\"middle\" x=\"322.5\" y=\"-224.6\" font-family=\"Times,serif\" font-size=\"18.00\">1.0</text>\n",
        "</g>\n",
        "<!-- 4&#45;11&#45;&gt;5 -->\n",
@@ -921,10 +921,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fd705bae660>"
+       "<graphviz.graphs.Digraph at 0x7f75f11a8a70>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,19 +949,22 @@
     "def sm(compidx,labels):\n",
     "    if compidx == mec_counter:\n",
     "        color = \"lightyellow\"\n",
+    "        label = \"EXIT\"\n",
     "    elif proper_mecs[compidx] == 1:\n",
     "        color = \"lightblue\"\n",
+    "        label = chr(ord('A') + compidx)\n",
     "    else:\n",
     "        color = \"pink\"\n",
-    "    return { \"color\" : color, \"style\" : \"filled\", \"label\" : chr(ord('A') + compidx) } \n",
+    "        label = chr(ord('A') + compidx)\n",
+    "    return { \"color\" : color, \"style\" : \"filled\", \"label\" : label } \n",
     "\n",
-    "### lightyellow component is an exit; lighblue components are proper end components\n",
+    "### lightyellow component is an absorbing exit (and/or target); lighblue components are proper end components\n",
     "q_mdp.digraph(state_map=sm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -983,6 +986,43 @@
     "q_A = q_mdp.get_system_matrix()\n",
     "\n",
     "print(q_A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SolverResult(status=optimal, result_vector=[-9.9999999e+08 -1.0000000e+09 -1.0000000e+09 -1.0000000e+09\n",
+      " -1.0000000e+09 -1.0000000e+09], value=-5999999990.0)\n",
+      "[-9.9999999e+08 -1.0000000e+09 -1.0000000e+09 -1.0000000e+09\n",
+      " -1.0000000e+09 -1.0000000e+09]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from switss.solver import LP\n",
+    "\n",
+    "constraints = q_A.shape[0]\n",
+    "variables = q_A.shape[1]\n",
+    "A = np.concatenate((q_A, np.zeros(shape=(2*variables, variables))), axis=0)\n",
+    "b = np.array(list(constraints*[1]) + list(2*variables*[-1e9]))\n",
+    "opt = np.array(variables*[1])\n",
+    "\n",
+    "for i in range(variables):\n",
+    "    A[(constraints + 2*i, i)] = 1\n",
+    "    A[(constraints + 2*i + 1, i)] = -1\n",
+    "\n",
+    "lp = LP.from_coefficients(A,b,opt,sense=\">=\")\n",
+    "result = lp.solve()\n",
+    "print(result)\n",
+    "\n",
+    "mec_certificate = result.result_vector\n",
+    "print(mec_certificate)"
    ]
   }
  ],
