generate mec certificate for ampd

--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -231,17 +231,20 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f75f11a8110>"
+       "<graphviz.graphs.Digraph at 0x7f690a81cb30>"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# using the example-DTMC above, we can retrieve its MECs.\n",
-    "components,proper_mecs,mec_counter = dtmc.maximal_end_components()\n",
+    "mecs = dtmc.maximal_end_components()\n",
+    "\n",
+    "components,proper_mecs,mec_counter = mecs\n",
+    "\n",
     "print(\"MEC amount:\", mec_counter)\n",
     "\n",
     "def sm(stateidx,labels):\n",
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,61 +285,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index by state action:\n",
-      " (from_state, action) <-> code\n",
-      "(0, 0) <-> 0\n",
-      "(1, 0) <-> 1\n",
-      "(2, 0) <-> 2\n",
-      "(3, 0) <-> 3\n",
-      "(4, 0) <-> 4\n",
-      "(3, 1) <-> 5\n",
-      "(5, 1) <-> 6\n",
-      "(5, 0) <-> 7\n",
-      "(6, 0) <-> 8\n",
-      "(7, 1) <-> 9\n",
-      "(7, 0) <-> 10\n",
-      "\n",
-      "\n",
-      "Transitions:\n",
-      "  (0, 1)\t1.0\n",
-      "  (1, 2)\t1.0\n",
-      "  (2, 0)\t0.3\n",
-      "  (2, 1)\t0.7\n",
-      "  (3, 0)\t0.2\n",
-      "  (3, 2)\t0.6\n",
-      "  (3, 5)\t0.2\n",
-      "  (4, 2)\t0.5\n",
-      "  (4, 6)\t0.5\n",
-      "  (5, 5)\t1.0\n",
-      "  (6, 3)\t1.0\n",
-      "  (7, 4)\t1.0\n",
-      "  (8, 4)\t1.0\n",
-      "  (9, 5)\t0.5\n",
-      "  (9, 6)\t0.5\n",
-      "  (10, 7)\t1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Index by state action:\\n (from_state, action) <-> code\")\n",
-    "for (from_state, action), code in mdp.index_by_state_action.items():\n",
-    "    print(f'({from_state}, {action}) <-> {code}') \n",
-    "print('\\n')\n",
+    "# get maximal end components from mdp\n",
+    "mecs = mdp.maximal_end_components()\n",
     "\n",
-    "print(\"Transitions:\")\n",
-    "print(mdp.P)"
+    "components,proper_mecs,mec_counter = mecs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -644,16 +605,15 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f75f11ab8c0>"
+       "<graphviz.graphs.Digraph at 0x7f690a7b75f0>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "components,proper_mecs,mec_counter = mdp.maximal_end_components()\n",
     "print(\"MEC amount:\", mec_counter)\n",
     "\n",
     "def sm(stateidx,labels):\n",
@@ -665,16 +625,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index by state action: (from_state, action) <-> code\n",
+      "(0, 0) <-> 0\n",
+      "(1, 0) <-> 1\n",
+      "(2, 0) <-> 2\n",
+      "(3, 0) <-> 3\n",
+      "(4, 0) <-> 4\n",
+      "(3, 1) <-> 5\n",
+      "(5, 1) <-> 6\n",
+      "(5, 0) <-> 7\n",
+      "(6, 0) <-> 8\n",
+      "(7, 1) <-> 9\n",
+      "(7, 0) <-> 10\n",
+      "\n",
+      "\n",
+      "Transitions:\n",
+      "  (0, 1)\t1.0\n",
+      "  (1, 2)\t1.0\n",
+      "  (2, 0)\t0.3\n",
+      "  (2, 1)\t0.7\n",
+      "  (3, 0)\t0.2\n",
+      "  (3, 2)\t0.6\n",
+      "  (3, 5)\t0.2\n",
+      "  (4, 2)\t0.5\n",
+      "  (4, 6)\t0.5\n",
+      "  (5, 5)\t1.0\n",
+      "  (6, 3)\t1.0\n",
+      "  (7, 4)\t1.0\n",
+      "  (8, 4)\t1.0\n",
+      "  (9, 5)\t0.5\n",
+      "  (9, 6)\t0.5\n",
+      "  (10, 7)\t1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "q_mdp = mdp.mec_quotient_mdp(components, proper_mecs, mec_counter)"
+    "print(\"Index by state action: (from_state, action) <-> code\")\n",
+    "for (from_state, action), code in mdp.index_by_state_action.items():\n",
+    "    print(f'({from_state}, {action}) <-> {code}') \n",
+    "print('\\n')\n",
+    "\n",
+    "print(\"Transitions:\")\n",
+    "print(mdp.P)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get mec quotient mdp\n",
+    "q_mdp = mdp.mec_quotient_mdp(mecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -921,10 +935,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f75f11a8a70>"
+       "<graphviz.graphs.Digraph at 0x7f69134be000>"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,65 +978,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.   0.8 -0.  -0.  -0.8 -0. ]\n",
-      " [-0.  -0.  -0.5  1.  -0.5 -0. ]\n",
-      " [-0.   1.  -0.  -1.  -0.  -0. ]\n",
-      " [-0.  -0.   1.  -1.  -0.  -0. ]\n",
-      " [ 1.  -0.5 -0.5 -0.  -0.  -0. ]\n",
-      " [ 1.  -0.  -0.  -0.  -0.  -1. ]\n",
-      " [-0.   1.  -0.  -0.  -0.  -1. ]\n",
-      " [-0.  -0.  -0.  -0.   1.  -1. ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "q_A = q_mdp.get_system_matrix()\n",
-    "\n",
-    "print(q_A)"
+    "# get system matrix of the mec quotient mdp\n",
+    "q_A = q_mdp.get_system_matrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[-0.   0.8 -0.  -0.  -0.8 -0. ] * z >=  1.0\n",
+      "[-0.  -0.  -0.5  1.  -0.5 -0. ] * z >=  1.0\n",
+      "[-0.  1. -0. -1. -0. -0.] * z >=  1.0\n",
+      "[-0. -0.  1. -1. -0. -0.] * z >=  1.0\n",
+      "[ 1.  -0.5 -0.5 -0.  -0.  -0. ] * z >=  1.0\n",
+      "[ 1. -0. -0. -0. -0. -1.] * z >=  1.0\n",
+      "[-0.  1. -0. -0. -0. -1.] * z >=  1.0\n",
+      "[-0. -0. -0. -0.  1. -1.] * z >=  1.0\n",
+      "[1. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[-1.  0.  0.  0.  0.  0.] * z >=  -1000000000.0\n",
+      "[0. 1. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[ 0. -1.  0.  0.  0.  0.] * z >=  -1000000000.0\n",
+      "[0. 0. 1. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[ 0.  0. -1.  0.  0.  0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 1. 0. 0.] * z >=  -1000000000.0\n",
+      "[ 0.  0.  0. -1.  0.  0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 1. 0.] * z >=  -1000000000.0\n",
+      "[ 0.  0.  0.  0. -1.  0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 1.] * z >=  -1000000000.0\n",
+      "[ 0.  0.  0.  0.  0. -1.] * z >=  -1000000000.0\n",
+      "\n",
+      "\n",
       "SolverResult(status=optimal, result_vector=[-9.9999999e+08 -1.0000000e+09 -1.0000000e+09 -1.0000000e+09\n",
-      " -1.0000000e+09 -1.0000000e+09], value=-5999999990.0)\n",
-      "[-9.9999999e+08 -1.0000000e+09 -1.0000000e+09 -1.0000000e+09\n",
-      " -1.0000000e+09 -1.0000000e+09]\n"
+      " -1.0000000e+09 -1.0000000e+09], value=-5999999990.0)\n"
      ]
     }
    ],
    "source": [
     "from switss.solver import LP\n",
     "\n",
+    "# constraints count and variables count in the system matrix   \n",
     "constraints = q_A.shape[0]\n",
     "variables = q_A.shape[1]\n",
+    "# create matrix for LP from the system matrix and add constrainst for bounding the variables\n",
     "A = np.concatenate((q_A, np.zeros(shape=(2*variables, variables))), axis=0)\n",
     "b = np.array(list(constraints*[1]) + list(2*variables*[-1e9]))\n",
     "opt = np.array(variables*[1])\n",
-    "\n",
     "for i in range(variables):\n",
     "    A[(constraints + 2*i, i)] = 1\n",
     "    A[(constraints + 2*i + 1, i)] = -1\n",
-    "\n",
+    "# calculate the variables in the certificate for EC=freeness of the quotient mdp\n",
     "lp = LP.from_coefficients(A,b,opt,sense=\">=\")\n",
     "result = lp.solve()\n",
-    "print(result)\n",
+    "mec_quotient_ec_free_cert = result.result_vector\n",
     "\n",
-    "mec_certificate = result.result_vector\n",
-    "print(mec_certificate)"
+    "for i in range(A.shape[0]):\n",
+    "    print(A[i], '* z >= ', b[i])\n",
+    "print('\\n')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEC certificate is valid: True\n",
+      "\n",
+      "\n",
+      "MEC quotient MPD EC-freeness certificate:\n",
+      "[-9.9999999e+08 -1.0000000e+09 -1.0000000e+09 -1.0000000e+09\n",
+      " -1.0000000e+09 -1.0000000e+09]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from switss.certification.mec_certificates import check_mec_certificate, generate_mec_certificate\n",
+    "\n",
+    "mec_certificate = generate_mec_certificate(mdp)\n",
+    "print(\"MEC certificate is valid:\", check_mec_certificate(mdp, mec_certificate))\n",
+    "\n",
+    "print('\\n')\n",
+    "print(\"MEC quotient MPD EC-freeness certificate:\")\n",
+    "print(mec_certificate[0])\n",
+    "\n",
+    "\n",
+    " "
    ]
   }
  ],
