--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -225,7 +225,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f9fa42ab620>"
+       "<graphviz.graphs.Digraph at 0x7f87945fd340>"
       ]
      },
      "execution_count": 3,
@@ -534,7 +534,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f9fec3c92b0>"
+       "<graphviz.graphs.Digraph at 0x7f874cded3a0>"
       ]
      },
      "execution_count": 6,
@@ -1068,7 +1068,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f9f9152f800>"
+       "<graphviz.graphs.Digraph at 0x7f874c02ffe0>"
       ]
      },
      "execution_count": 13,
@@ -1398,7 +1398,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f9f91578920>"
+       "<graphviz.graphs.Digraph at 0x7f874c079b20>"
       ]
      },
      "execution_count": 16,
@@ -1728,6 +1728,115 @@
     "print('\\n')\n",
     "\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MDP: wrong MEC-composition not certified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 4 4 1 3 1 2 0]\n",
+      "[1 1 0 0 1]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from switss.model import MDP\n",
+    "import numpy as np\n",
+    "from switss.utils import color_from_hash\n",
+    "\n",
+    "# setup the graph (same as above)\n",
+    "# ----------------\n",
+    "SAPpairs = [(3,0,5,0.2),(3,0,0,0.2),(2,0,1,0.7),(0,0,1,1),(1,0,2,1),(2,0,0,0.3),(3,0,2,0.6),(4,0,2,0.5),(3,1,5,1),(5,1,3,1),(5,0,4,1),(4,0,6,0.5),(6,0,4,1),(7,1,6,0.5),(7,1,5,0.5),(7,0,7,1)]\n",
+    "index_by_state_action = {(0,0):0,(1,0):1,(2,0):2,(3,0):3,(4,0):4,(3,1):5,(5,1):6,(5,0):7,(6,0):8,(7,1):9,(7,0):10}\n",
+    "P = np.zeros(shape=(11,8))\n",
+    "for s,a,d,p in SAPpairs:\n",
+    "    P[index_by_state_action[(s,a)],d] = p\n",
+    "# ----------/------\n",
+    "\n",
+    "mdp = MDP(P,index_by_state_action)\n",
+    "\n",
+    "# get maximal end components from mdp\n",
+    "mecs = mdp.maximal_end_components()\n",
+    "\n",
+    "components,proper_mecs,mec_counter = mecs\n",
+    "\n",
+    "print(components)\n",
+    "print(proper_mecs)\n",
+    "print(mec_counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 4 4 1 3 1 2 0]\n",
+      "[1 1 0 0 1 0]\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FAKE maximal end component decomposition\n",
+    "\n",
+    "components[0] = mec_counter\n",
+    "proper_mecs = np.append(proper_mecs, 0)\n",
+    "mec_counter += 1\n",
+    "\n",
+    "print(components)\n",
+    "print(proper_mecs)\n",
+    "print(mec_counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mec_certificate \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_mec_certificate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmdp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmecs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMEC quotient MPD EC-freeness certificate:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(mec_certificate[\u001b[38;5;241m0\u001b[39m])\n",
+      "File \u001b[0;32m~/anaconda3/envs/cenv/lib/python3.12/site-packages/switss-0.1-py3.12-linux-x86_64.egg/switss/certification/mec_certificates.py:132\u001b[0m, in \u001b[0;36mgenerate_mec_certificate\u001b[0;34m(amdp, mecs, certificate_bounds)\u001b[0m\n\u001b[1;32m    130\u001b[0m \u001b[38;5;66;03m# unite certificates\u001b[39;00m\n\u001b[1;32m    131\u001b[0m mec_certificate \u001b[38;5;241m=\u001b[39m (mec_quotient_ec_free_cert, mec_strongly_connected_cert)\n\u001b[0;32m--> 132\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m check_mec_certificate(amdp, mecs, mec_certificate)\n\u001b[1;32m    133\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m mec_certificate\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "mec_certificate = generate_mec_certificate(mdp, mecs)\n",
+    "\n",
+    "print(\"MEC quotient MPD EC-freeness certificate:\")\n",
+    "print(mec_certificate[0])\n",
+    "print('\\n')\n",
+    "\n",
+    "print(\"MEC strongly connected certificate:\")\n",
+    "print(\"fwd:\", mec_certificate[1][0])\n",
+    "print(\"bwd:\", mec_certificate[1][1]) \n",
+    "print('\\n')\n",
+    "\n",
+    "print(\"MEC certificate is valid:\", check_mec_certificate(mdp, mecs, mec_certificate))\n",
+    "print('\\n')"
    ]
   }
  ],
