small fix (notebook)

--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -235,10 +235,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f58e86d63c0>"
+       "<graphviz.graphs.Digraph at 0x7f7b8c959130>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -544,10 +544,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f58e86d4f20>"
+       "<graphviz.graphs.Digraph at 0x7f7b8c959f40>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1059,10 +1059,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f58e86d5010>"
+       "<graphviz.graphs.Digraph at 0x7f7b8c959b20>"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1389,10 +1389,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f58e86d4650>"
+       "<graphviz.graphs.Digraph at 0x7f7b8c9599a0>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1457,22 +1457,21 @@
       "[ 1.  0.  0.  0.  0. -1.] * z >=  1.0\n",
       "[ 0.  1.  0.  0.  0. -1.] * z >=  1.0\n",
       "[ 0.  0.  0.  0.  1. -1.] * z >=  1.0\n",
-      "[1. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[-1.  0.  0.  0.  0.  0.] * z >=  -1000000000.0\n",
-      "[0. 1. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[ 0. -1.  0.  0.  0.  0.] * z >=  -1000000000.0\n",
-      "[0. 0. 1. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[ 0.  0. -1.  0.  0.  0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 1. 0. 0.] * z >=  -1000000000.0\n",
-      "[ 0.  0.  0. -1.  0.  0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 1. 0.] * z >=  -1000000000.0\n",
-      "[ 0.  0.  0.  0. -1.  0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 1.] * z >=  -1000000000.0\n",
-      "[ 0.  0.  0.  0.  0. -1.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
+      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
       "\n",
       "\n",
-      "SolverResult(status=optimal, result_vector=[-9.99999994e+08 -9.99999995e+08 -9.99999995e+08 -9.99999996e+08\n",
-      " -9.99999999e+08 -1.00000000e+09], value=-5999999979.0)\n"
+      "SolverResult(status=optimal, result_vector=[ 2.  1.  1.  0. -3. -4.], value=0.0)\n"
      ]
     }
    ],
@@ -1483,7 +1482,7 @@
     "constraints = q_A.shape[0]\n",
     "variables = q_A.shape[1]\n",
     "# create matrix for LP from the system matrix and add constrainst for bounding the variables\n",
-    "A = np.concatenate((q_A, np.zeros(shape=(2*variables, variables))), axis=0)\n",
+    "A = q_A\n",
     "b = np.array(list(constraints*[1]) + list(2*variables*[-1e9]))\n",
     "opt = np.array(variables*[0])\n",
     "# calculate the variables in the certificate for EC=freeness of the quotient mdp\n",
@@ -1499,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1507,14 +1506,14 @@
      "output_type": "stream",
      "text": [
       "Multiply system Matrix with the certificate: \n",
-      "[[3.20000005]\n",
-      " [1.        ]\n",
-      " [1.        ]\n",
-      " [1.        ]\n",
-      " [1.        ]\n",
-      " [6.        ]\n",
-      " [5.        ]\n",
-      " [1.        ]]\n"
+      "[[3.2]\n",
+      " [1. ]\n",
+      " [1. ]\n",
+      " [1. ]\n",
+      " [1. ]\n",
+      " [6. ]\n",
+      " [5. ]\n",
+      " [1. ]]\n"
      ]
     }
    ],
@@ -1525,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
