correct fwd, bwd certificate check

--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -235,10 +235,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f7b8c959130>"
+       "<graphviz.graphs.Digraph at 0x7f1574675550>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -544,10 +544,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f7b8c959f40>"
+       "<graphviz.graphs.Digraph at 0x7f152c463800>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1059,10 +1059,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f7b8c959b20>"
+       "<graphviz.graphs.Digraph at 0x7f152acc99d0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1389,10 +1389,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f7b8c9599a0>"
+       "<graphviz.graphs.Digraph at 0x7f1519dbc770>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1457,18 +1457,6 @@
       "[ 1.  0.  0.  0.  0. -1.] * z >=  1.0\n",
       "[ 0.  1.  0.  0.  0. -1.] * z >=  1.0\n",
       "[ 0.  0.  0.  0.  1. -1.] * z >=  1.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
-      "[0. 0. 0. 0. 0. 0.] * z >=  -1000000000.0\n",
       "\n",
       "\n",
       "SolverResult(status=optimal, result_vector=[ 2.  1.  1.  0. -3. -4.], value=0.0)\n"
@@ -1498,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1644,13 +1632,20 @@
      "output_type": "stream",
      "text": [
       "[False  True  True False False  True False False]\n",
-      "[False  True  True False False  True False False]\n"
+      "[False  True  True False False  True False False]\n",
+      "[1 1 1 1 1]\n"
      ]
     }
    ],
    "source": [
-    "# check fwd and bwd\n",
     "vertex_count = mdp.P.shape[1]\n",
+    "# check fwd, bwd are functions: S -> N\n",
+    "if fwd.shape[0] != vertex_count or bwd.shape[0] != vertex_count:\n",
+    "    print(\"INVALID\")\n",
+    "if not np.issubdtype(fwd.dtype, np.integer) or not np.issubdtype(bwd.dtype, np.integer):\n",
+    "    print(\"INVALID\")\n",
+    "# check fwd and bwd non-leader constraints\n",
+    "\n",
     "fwd_ok = np.zeros(vertex_count, dtype=bool)\n",
     "bwd_ok = np.zeros(vertex_count, dtype=bool)\n",
     "\n",
@@ -1661,20 +1656,25 @@
     "            fwd_ok[u_state] = True\n",
     "        if bwd[u_state] < bwd[v_state]:\n",
     "            bwd_ok[v_state] = True\n",
-    "# all elements except of component leaders (bwd[u] = fwd[u] = 0) must be True\n",
-    "if not np.all(fwd_ok == bwd_ok):  \n",
+    "if not np.all(fwd_ok == bwd_ok):  # all elements except of component leaders (bwd[u] = fwd[u] = 0) must be True\n",
     "    print(\"INVALID\")\n",
-    "# the amount of leaders must be equal to the amount of components\n",
-    "if (fwd_ok == False).sum() != mec_counter:\n",
+    "# check leaders-components bijection (each component has exactly one leader)\n",
+    "component_leaders = np.zeros(mec_counter, dtype=int)\n",
+    "for state,ok in enumerate(fwd_ok):\n",
+    "    if not ok:  # then state is a leader\n",
+    "        component_leaders[components[state]] += 1\n",
+    "if not (component_leaders == 1).all():\n",
     "    print(\"INVALID\")\n",
     "\n",
+    "\n",
     "print(fwd_ok)\n",
-    "print(bwd_ok)"
+    "print(bwd_ok)\n",
+    "print(component_leaders)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
