fix edges selection when checking scc certificate

--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -235,10 +235,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f1574675550>"
+       "<graphviz.graphs.Digraph at 0x7f1519dbf0e0>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -544,10 +544,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f152c463800>"
+       "<graphviz.graphs.Digraph at 0x7f1519dbfb90>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1059,10 +1059,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f152acc99d0>"
+       "<graphviz.graphs.Digraph at 0x7f1519dbf860>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1389,10 +1389,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f1519dbc770>"
+       "<graphviz.graphs.Digraph at 0x7f1519d278c0>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1556,9 +1556,8 @@
     "    if code not in original_inner_action_codes:\n",
     "        continue\n",
     "    u_state, action = mdp.index_by_state_action.inv[code]\n",
-    "    if components[u_state] == components[v_state]:\n",
-    "        adj[u_state].append(v_state)\n",
-    "        rev_adj[v_state].append(u_state)\n",
+    "    adj[u_state].append(v_state)\n",
+    "    rev_adj[v_state].append(u_state)\n",
     "\n",
     "print(\"Adjacency list with only inner actions:\")\n",
     "for u, v_list in adj.items():\n",
@@ -1572,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1623,8 +1622,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check the certificate (fwd, bwd) for MECs begin strongly connected according to Lemma 3.27\n",
+    "\n",
+    "The check of the certificate for MEC-decomposition quotient-MDP being EC-free proves that each state belongs to exactly one MEC. That is why we can assume $fwd, bwd$ are functions: $S \\to N$. Use only transition from EC inner actions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1650,12 +1658,13 @@
     "bwd_ok = np.zeros(vertex_count, dtype=bool)\n",
     "\n",
     "for code, v_state in list(mdp.P.keys()):\n",
+    "    if code not in original_inner_action_codes:\n",
+    "        continue\n",
     "    u_state, action = mdp.index_by_state_action.inv[code]\n",
-    "    if components[u_state] == components[v_state]:\n",
-    "        if fwd[v_state] < fwd[u_state]:\n",
-    "            fwd_ok[u_state] = True\n",
-    "        if bwd[u_state] < bwd[v_state]:\n",
-    "            bwd_ok[v_state] = True\n",
+    "    if fwd[v_state] < fwd[u_state]:\n",
+    "        fwd_ok[u_state] = True\n",
+    "    if bwd[u_state] < bwd[v_state]:\n",
+    "        bwd_ok[v_state] = True\n",
     "if not np.all(fwd_ok == bwd_ok):  # all elements except of component leaders (bwd[u] = fwd[u] = 0) must be True\n",
     "    print(\"INVALID\")\n",
     "# check leaders-components bijection (each component has exactly one leader)\n",
@@ -1674,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
