--- a/examples/mec_cetrification.ipynb
+++ b/examples/mec_cetrification.ipynb
@@ -787,7 +787,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check the certificate (fwd, bwd) for MECs begin strongly connected according to lemma 3.27\n",
+    "### Check the certificate (fwd, bwd) for MECs being strongly connected according to lemma 3.27\n",
     "\n",
     "The check of the certificate for MEC-decomposition quotient-MDP being EC-free proves that each state belongs to exactly one MEC. Use only transitions from EC inner actions so the graph consists of unconnected MECs. Due to this restriction we can assume $fwd, bwd$ are functions: $S \\to N$ because there are no edges between MECs.\n",
     "\n",
